# api-v2

./: .gitignore  Cargo.toml  default.nix  package.nix  shell.nix
src/: config.rs  main.rs
src/endpoints/: beacons.rs  doorbell.rs  events.rs  mod.rs  phonebell.rs  printer.rs
